# jackc

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md  justfile  riscv.toolchain.cmake
jackc/: CMakeLists.txt  README.md  main.c  main.h
jackc/common/: CMakeLists.txt  common.c  common.h  common_string.c  config.c  config.h  exit_code.h  jackc_assert.c  logger.c  logger.h  read_file_content.c  string.c  type_mappers.c  type_mappers.h
jackc/common/data-structures/: allocator.h  hashmap.c  hashmap.h
jackc/compiler/: CMakeLists.txt  README.md  frontend.c  frontend.h  frontend_exec.c  main.c  tmp.h
jackc/compiler/ast/: ast.c  ast.h  symtab_traversal.c  symtab_traversal.h  traversals.c  traversals.h
jackc/compiler/ast/traversals/: ast_traversal_utils.c  ast_traversal_utils.h  semantic_validity_traversal.c  symtab_traversal.c
jackc/compiler/ast/traversals/code-gen/: code_gen_utils.c  code_gen_utils.h  std_utils.c  std_utils.h  vm_code_gen_traversal.c  vm_code_gen_utils.c  vm_code_gen_utils.h
jackc/compiler/diagnostics-engine/: CMakeLists.txt  diagnostic.h  engine.c  engine.h
jackc/compiler/diagnostics-engine/translations/: en.c  translation.h
jackc/compiler/function-registry/: function_registry.c  function_registry.h
jackc/compiler/lexer/: compiler_lexer.c  compiler_lexer.h  compiler_lexer_internal.c  compiler_lexer_internal.h  compiler_reserved_keywords.c  compiler_reserved_keywords.h
jackc/compiler/parser/: ast.c  ast.h  compiler_parser.c  compiler_parser.h  compiler_parser_diagnostics.c  compiler_parser_diagnostics.h  compiler_parser_internal.c  compiler_parser_internal.h  compiler_parser_utils.c  compiler_parser_utils.h
jackc/compiler/symtable/: compiler_symtable.c  compiler_symtable.h  symtable_token.h
jackc/core/: CMakeLists.txt  README.md  cli.c  cli.h  config.c  config.h  exit_code.h  hash.c  hash.h  jackc_file_utils.h
jackc/core/allocators/: adapters.c  adapters.h  allocators.c  allocators.h
jackc/core/asserts/: jackc_assert.c  jackc_assert.h
jackc/core/data-structures/: hashmap.c  hashmap.h
jackc/core/file-utils/: common_file_utils.c  linux_file_utils.c  rars_file_utils.c  windows_file_utils.c
jackc/core/localization/: locale.c  locale.h
jackc/core/localization/translations/: en.c  ru.c
jackc/core/logging/: logger.c  logger.h
jackc/vm-translator/: CMakeLists.txt  README.md  backend.c  backend.h  backend_exec.c  constants.h  main.c  parser.c  parser.h  tmp.c  tmp.h  utils.c  utils.h  vm_parser.c  vm_utils.c
jackc/vm-translator/code-gen/: asm_code_gen.c  asm_code_gen.h  asm_emit.c  asm_emit.h  asm_utils.c  asm_utils.h  regs.h  stack_frame.c  stack_frame.h  virtual_stack.c  virtual_stack.h
jackc/vm-translator/code-generation/: code_gen.c  code_gen.h  code_gen_utils.c  code_generation.c  code_generator.c  utils.h  vm_code_gen_utils.c  vm_code_gen_utils.h  vm_code_generation.c  vm_code_generator.c  vm_code_generator.h
jackc/vm-translator/parser/: vm_parser.c  vm_parser.h  vm_parser_internal.c  vm_parser_internal.h  vm_parser_utils.c  vm_parser_utils.h
platform/: CMakeLists.txt  README.md  jack_stdlib.h  jackc_stdio.h  jackc_stdlib.h  jackc_string.h
platform/linux/: README.md  io.c  memory.c  process.c  string.c  syscalls.c
platform/linux/std/: io.c
platform/rars/: README.md  io.c  memory.c  process.c  rars_syscalls.c  rars_syscalls.h  string.c  syscalls.c
platform/rars/std/: io.c  memory.c  process.c
platform/std/: jackc_common_string.c  jackc_limits.h  jackc_stdio.h  jackc_stdlib.h  jackc_string.h  jackc_syscalls.h
platform/std/libc/: libc_memory.c  libc_string.c
platform/std/nolibc/: nolibc_memory.c  nolibc_string.c
platform/windows/: README.md  syscalls.c
platform/windows/std/: io.c  process.c
tests/: CMakeLists.txt  main.c
tests/allocators/: arena_allocator.c
tests/compiler/ast/: are_types_compatible.c
tests/compiler/diagnostics-engine/: error_reporting.c
tests/compiler/diagnostics-engine/frontend-errors/: error_reporting.c
tests/compiler/diagnostics-engine/parsing-errors/: error_reporting.c
tests/compiler/diagnostics-engine/tests/invalid-subroutine/: expected.txt
tests/compiler/diagnostics-engine/tests/invalid-subroutine-body/: expected.txt  source.jack
tests/compiler/diagnostics-engine/tests/invalid-term-token/: expected.txt
tests/compiler/diagnostics-engine/tests/invalid_subroutine/: source.jack
tests/compiler/diagnostics-engine/tests/no-class/: expected.txt
tests/compiler/function-registry/: insert.c  utils.h
tests/compiler/integration/: runner.c
tests/compiler/lexer/: comments.c  eof.c  identifiers.c  internal.c  lexer_test_utils.c  lexer_test_utils.h  line_col_counting.c  numbers.c  operations.c  string_literals.c  tabs_and_spaces.c  unknown_characters.c
tests/compiler/parser/: class.c  class_var_dec.c  error_recovery.c  expression.c  param_list.c  statements.c  subroutine.c  test_parser_utils.c  test_parser_utils.h  var_dec.c
tests/compiler/symtab/: find.c  insert.c  push_pop.c  utils.h
tests/data-structures/: fixed_hashmap.c
tests/e2e/: build.gradle.kts
tests/e2e/src/: ArrayTests.kt  FibonacciTests.kt  Main.kt
tests/e2e/src/math/: MathAbsTests.kt  MathMaxTests.kt  MathMinTests.kt  MathSqrtTests.kt
tests/e2e/src/memory/: MemoryAllocTests.kt  MemoryDeallocTests.kt  MemoryPeekTests.kt  MemoryPokeTests.kt
tests/include/: test_ast_types.h  test_lexer_common.h  test_parser_utils.h  test_path_utils.h
tests/stdlib/: build.gradle.kts
tests/stdlib/libs/: jackc
tests/stdlib/src/: ArrayTests.kt  Main.kt  TestsConstants.kt
tests/stdlib/src/math/: MathAbsTests.kt  MathMaxTests.kt  MathMinTests.kt  MathSqrtTests.kt
tests/stdlib/src/memory/: MemoryAllocTests.kt  MemoryDeallocTests.kt  MemoryPeekTests.kt  MemoryPokeTests.kt
tests/utils/: test_path_utils.c
tests/vm-translator/parser/: errors.c  instructions.c  multi_line.c  test_vm_parser.h
tests/vm-translator/vm-code/: FibonacciSeries.vm  LinkedList.vm
tests/vm-translator/vm-code/fibonacci-1/: FibonacciSeries.vm
tests/vm-translator/vm-code/linked-list/: LinkedList.vm
(+100 files in other folders)
